--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -2766,6 +2766,21 @@ footer {
   color: white;
 }
 
+/* home omisify - Popup Maintenance.js */
+/* home omisify - Popup Maintenance.js */
+/* home omisify - Popup Maintenance.js */
+/* home omisify - Popup Maintenance.js */
+/* home omisify - Popup Maintenance.js 
+.popup-maintenance-opacity {
+  background: #00000050;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+*/
+
 /* home omisify - popup card.js */
 /* home omisify - popup card.js */
 /* home omisify - popup card.js */
