--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -1167,6 +1167,7 @@ footer {
   border: none;
   border-radius: 30px;
   padding: 15px 25px;
+  width: 150px;
   margin-top: 40px;
   font-size: 16px;
 }
