--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -3046,6 +3046,12 @@ footer {
   padding-right: 7px;
 }
 
+/* home omisify - home.js */
+/* home omisify - home.js */
+/* home omisify - home.js */
+.droit-dauteur-partner-omisify .left img {
+  width: 50%;
+}
 
 
 /* home omisify - popup card.js */
