--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -3054,9 +3054,11 @@ footer {
   padding-bottom: 20px;
 }
 
-.page-partner-popup-to-right-opacity .card .display svg {
-  padding-right: 7px;
+.page-partner-popup-to-right-opacity .card .display p {
+  display: flex;
+  flex-wrap: nowrap;
 }
+
 
 /* home omisify - home.js */
 /* home omisify - home.js */
