--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -3340,7 +3340,7 @@ footer {
   bottom: 0;
   width: 100%;
   position: fixed;
-  background-color: #e60000;
+  background-color: #ff1a1a;
 }
 
 .navbar-bottom-omisify .display .a {
