--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -3172,6 +3172,9 @@ footer {
 .generation-omisify .a p {
   text-align: center;
   font-size: 20px;
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
 }
 
 .generation-omisify .display-mobile-version {
@@ -3674,7 +3677,7 @@ footer {
 
 .popup-vocabulary-opacity-navbar-top .align {
   margin-top: 140px;
-  padding-bottom: 150px;
+  padding-bottom: 50px;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   position: absolute;
